[package]
name = "casper3643"
version = "0.1.0"
edition = "2021"
description = "ERC-3643 permissioned token suite + multi-agent Compliance Quorum on Casper (Odra)"
license = "Apache-2.0"

[dependencies]
odra = { version = "2.8", default-features = false }
odra-modules = { version = "2.8", default-features = false, features = ["eip712"] }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
odra-test = "2.8"
hex = "0.4"

[build-dependencies]
odra-build = "2.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8", default-features = false }
odra-cli = { version = "2.8", default-features = false }

[[bin]]
name = "casper3643_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casper3643_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
